# FiltersCPP

./: CMakeLists.txt  README.md
.reuse/: dep5
src/: constants.h  main.cpp
src/tasks/: blur.h  cartoonize.h  greyscale.h  magnitude.h  negative.h  quantize.h  sobel.h  task.h
src/utils/: filters.h  kernels.h  watch_channel.h
src/utils/camera/: camera.cpp  camera.h
src/utils/processor/: processor.cpp  processor.h
